--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "pinia": "^3.0.1",
     "sass": "^1.87.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "@cubejs-client/core": "^0.31.0",
+    "chart.js": "^4.0.0"
   },
   "devDependencies": {
+    "parcel": "^2.6.2",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
